fix :: 문제 수정 및 overflow hidden 설정

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-color: #eee;
   color: #111;
   background-color: #111;
-  
+  overflow: hidden;
 }
 :root {
   --marquee-width: 200vw;
